--- a/client/package.json
+++ b/client/package.json
@@ -12,31 +12,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
-    "@emotion/react": "^11.11.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/arcgis-rest-api": "^10.4.5",
-    "@types/geojson": "^7946.0.10",
-    "@types/node": "^18.11.18",
-    "@types/proj4": "^2.5.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/topojson-specification": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "^8.32.0",
-    "vite": "^4.0.4",
-    "vite-plugin-checker": "^0.5.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/arcgis-rest-api": "^10.4.8",
+    "@types/geojson": "^7946.0.16",
+    "@types/node": "^18.19.103",
+    "@types/proj4": "^2.5.6",
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "@types/topojson-specification": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.5.0",
+    "eslint": "^8.57.1",
+    "vite": "^6.3.5",
+    "vite-plugin-checker": "^0.9.3",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.5",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@ubigu/shared": "file:../shared",
-    "ol": "^7.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.22.4"
+    "ol": "^10.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
+    "zod": "^3.25.28"
   }
 }
