--- a/shared/package.json
+++ b/shared/package.json
@@ -10,11 +10,15 @@
   "author": "Ubigu Oy",
   "license": "MIT",
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "^18.11.18",
-    "typescript": "^4.9.4"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/geojson": "^7946.0.16",
+    "@types/node": "^18.19.103",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "zod": "3.x"
+    "zod": ">=3.25.28"
+  },
+  "dependencies": {
+    "zod-geojson": "^0.0.3"
   }
 }
