Fix lib error on zod build

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -5,7 +5,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["es2022"],
-    "outDir": "dist"
+    "outDir": "dist",
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
