--- a/.github/workflows/push_to_ecs.yml
+++ b/.github/workflows/push_to_ecs.yml
@@ -15,7 +15,6 @@ env:
   ECR_REPOSITORY: ${{vars.ECR_REPO}} # set this to your Amazon ECR repository name
   ECS_SERVICE: ${{vars.ECS_SERVICE}}
   ECS_CLUSTER: ${{vars.AWS_ECS_CLUSTER}} # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: ./data/ecs_task.json # set this to the path to your Amazon ECS task definition
   CONTAINER_NAME: service # set this to the name of the container in the
 
 permissions:
@@ -86,7 +85,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           latest_image_tag=$(aws ecr describe-images \
-            --repository-name my-repo-name \
+            --repository-name $ECR_REPOSITORY \
             --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' \
             --output text)
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$latest_image_tag" >> $GITHUB_OUTPUT
