--- a/.github/workflows/push_to_ecs.yml
+++ b/.github/workflows/push_to_ecs.yml
@@ -111,6 +111,6 @@ jobs:
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
-          task-definition: ${{ steps.render-web-container.outputs.task-definition }}
+          task-definition: ${{ steps.render-definition.outputs.task-definition }}
           service: ${{env.ECS_SERVICE}}
           cluster: ${{env.ECS_CLUSTER}}
